force-app/main/default/objects/MP_News_Announcements__c/MP_News_Announcements__c.object-meta.xml
<CustomObject>
    <label>MP News &amp; Announcements</label>
    <nameField>
        <displayFormat>News-{0000}</displayFormat>
        <label>News &amp; Announcement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MP News &amp; Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>