force-app/main/default/objects/MP_News_Announcements__c/fields/News_Details__c.field-meta.xml
<CustomField>
    <fullName>News_Details__c</fullName>
    <label>News Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>