force-app/main/default/objects/MP_News_Announcements__c/fields/News_Order__c.field-meta.xml
<CustomField>
    <fullName>News_Order__c</fullName>
    <label>News Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>